--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -52,7 +52,7 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-bordered" id="repoTable" width="100%" cellspacing="0">
-                        <head>
+                        <thead>
                             <tr>
                                 <th>Repository</th>
                                 <th>Build Status</th>
@@ -92,7 +92,7 @@
                             </tr>
                             {% endfor %}
                             </tbody>
-                        </head>
+                        </thead>
                     </table>
                 </div>
             </div>
